# api/routes/users.js
@@ -1,14 +1,15 @@
 import { Router } from "express";
 import { createUserSchema } from "../schemas/userSchema.js";
-import { validateArticle } from "./middleware.js";
+import { validateArticle, uploadProfilPicture } from "./middleware.js";
 import { createUser } from "../controllers/user.js";
+import multer from "multer";
 
-var router = Router();
+const router = Router();
 /* GET users listing. */
 router.get("/", function (req, res, next) {
   res.send({ username: "ruchdane" });
 });
 
-router.post("/", validateArticle(createUserSchema), createUser);
+router.post("/", uploadProfilPicture, validateArticle(createUserSchema), createUser);
 
 export default router;
